// for syntax highlighting we use proto3 version
syntax="proto3";

// package name for our proto file
package calculator;

// path to our current folder, where the generated files will be placed
option go_package = "./proto/calculator";

message SumRequest {
    int64 First = 1;
    int64 Second = 2;
};
message SumResponse{
    int64 SumResult = 1;
};

message PrimeDecompositionRequest {
    int64 prime_number = 1;
};
message PrimeDecompositionResponse {
    int64 primeFactor = 1;
};
message SumOfTheArrayElementsRequest {
    int64 element = 1;
}
message SumOfTheArrayElementsResponse {
    int64 sumofallelements = 1;
}
// defining all the Services for the gRPC
service CalculatorService {
    // Unary RPC..
    rpc Calculator(SumRequest) returns (SumResponse) {};
    
    // Server Streaming...  
    rpc PrimeNumberDecomposition(PrimeDecompositionRequest) returns (stream PrimeDecompositionResponse){};

    // Client Streaming...
    rpc SumOfTheArrayElements(stream SumOfTheArrayElementsRequest) returns (SumOfTheArrayElementsResponse){};
}

